# HIPPIE

./: .gitignore  CHANGELOG.md  README.md  dockerfile  pyproject.toml  requirements.txt  test_opto_stim.ipynb
dandi253_data/openscope-glo-celltype/: isi_dist.csv  waveforms.csv
datasets/allenscope-neuropixel/: labels.csv
datasets/allenscope_neuropixel/: area.csv
datasets/autocurated/: isi_dist.csv  waveforms.csv
datasets/cellexplorer-area/: CellExplorer_metadata.csv  isi_dist.csv  labels.csv  waveforms.csv
datasets/cellexplorer-celltype/: isi_dist.csv  labels.csv  waveforms.csv
datasets/extracellular-mouse-a1/: isi_dist.csv  labels.csv  waveforms.csv
datasets/juxtacellular-mouse-s1-area/: area.csv  celltypes.csv  isi_dist.csv  waveforms.csv
datasets/juxtacellular-mouse-s1-celltype/: celltypes.csv  isi_dist.csv  waveforms.csv
datasets/neonatal-mouse-brain-slice/: isi_dist.csv  labels.csv  (+1 more)
hippie/: backbones.py  dataloading.py  model.py  optimizers.py  utils.py
inference_results_openscope/: openscope-glo-celltype_isi_embeddings.csv  openscope-glo-celltype_joint_embeddings.csv  openscope-glo-celltype_waveform_embeddings.csv
scripts/: csv_diff.py  dandi_253_download.ipynb  inference_from_trained_model.py  opto_spike_analysis.ipynb  simple_csv_diff.py  train_model.py  train_model_with_multimodal.py
trained_models/: allenscope-neuropixel_isi_embeddings.csv  allenscope-neuropixel_isi_knn.csv  allenscope-neuropixel_joint_embeddings.csv  allenscope-neuropixel_joint_knn.csv  allenscope-neuropixel_waveform_embeddings.csv  allenscope-neuropixel_waveform_knn.csv  pretraining_allenscope-neuropixel_isi_embeddings.csv  pretraining_allenscope-neuropixel_joint_embeddings.csv  pretraining_allenscope-neuropixel_waveform_embeddings.csv
(+6 files in other folders)
