[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippie"
version = "0.1.0"
description = "A package to perform classification and clustering of neurons based on HD-MEA recordings"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jesus Gonzalez Ferrer", email = "jesusgzlezferrer@gmail.com"},
    {name = "Julian Lehrer", email = "jlehrer@ucsc.com"}
]
maintainers = [
    {name = "Jesus Gonzalez Ferrer", email = "jesusgzlezferrer@gmail.com"},
    {name = "Julian Lehrer", email = "jlehrer@ucsc.com"}
]
keywords = ["neuroscience", "HD-MEA", "clustering", "classification", "neurons"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pytorch-lightning",
    "wandb",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]


[project.urls]
"Homepage" = "https://github.com/braingeneers/HIPPIE"

[project.scripts]
hippie-cli = "hippie.cli:main"

[tool.setuptools]
packages = ["hippie"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88